# mysql-cdc-rs

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  README_ZH.md  binlog_data_example.txt  binlog_data_example_eg.txt
agent/: Cargo.toml
binlog/: Cargo.toml  README.md
binlog/docs/: row_parsing_monitoring_guide.md
binlog/src/: b_type.rs  binlog_options.rs  binlog_server.rs  cli.rs  connection.rs  lib.rs  mysql.rs  utils.rs
binlog/src/alias/mysql/: mod.rs
binlog/src/ast/: mod.rs  query_parser.rs
binlog/src/cli/: cli.rs
binlog/src/column/: byte_reader_ext.rs  charset.rs  column_metadata.rs  column_parser.rs  column_type.rs  column_value.rs  column_value_unified.rs  custom_decoder.rs  mod.rs  performance.rs  string_optimization.rs  type_decoder.rs
binlog/src/column/decoders/: bit.rs  blob.rs  datetime.rs  decimal_enhanced.rs  geometry.rs  json.rs  mod.rs  numeric.rs  string.rs
binlog/src/decoder/: binlog_decoder.rs  binlog_reader_wrapper.rs  bytes_binlog_reader.rs  concrete_decoders.rs  event_decoder.rs  event_decoder_impl.rs  event_decoder_registry.rs  event_parser_dispatcher.rs  event_statistics.rs  file_binlog_reader.rs  log_decoder.rs  mod.rs  mysql8_decoders.rs  table_cache_manager.rs
binlog/src/dump/: dump_table_map_event.rs  dump_write_rows_event.rs  mod.rs
binlog/src/events/: binlog_event.rs  checksum_type.rs  event.rs  event_c.rs  event_factory.rs  event_header.rs  event_header_c.rs  event_header_flag.rs  event_raw.rs  gtid_set.rs  log_context.rs  log_event.rs  log_position.rs  log_stat.rs  mod.rs  query.rs  rows.rs  tracker.rs
binlog/src/events/column/: column_type.rs  column_value.rs
binlog/src/events/declare/: log_event.rs  mod.rs  rows_log_event.rs
binlog/src/ext/: decode_error_ext.rs  mod.rs  sqlparser_ext.rs
binlog/src/factory/: dump_factory.rs  event_factory.rs  mod.rs
binlog/src/metadata/: default_charset.rs  gtid_manager.rs  metadata_manager.rs  metadata_type.rs  mod.rs  sync_manager.rs  table_cache.rs  table_metadata.rs
binlog/src/relay_log/: building.rs  mod.rs  queue_manager.rs
binlog/src/row/: actual_string_type.rs  decimal.rs  event_handler.rs  mod.rs  monitoring.rs  monitoring_test.rs  parser.rs  parser_integration_test.rs  performance.rs  row_data.rs  row_parser.rs  rows.rs  simple_monitoring_test.rs  update_analyzer.rs
binlog_cli/: Cargo.toml  README.md  build.rs
binlog_cli/examples/: basic_usage.md  config_template.toml
binlog_cli/src/: cli_client.rs  cli_options.rs  main.rs  pretty_util.rs
common/: Cargo.toml
common/mock/: metadata.toml
common/src/: codec.rs  decimal_util.rs  file_util.rs  lib.rs  pretty_util.rs  time_util.rs  uuid.rs
common/src/binlog/: mod.rs  src_meta.rs
common/src/column/: column.rs  column_type.rs  column_value.rs
common/src/config/: config.rs  load_style.rs  mod.rs
common/src/err/: DecodeError.rs  decode_error.rs  mod.rs
common/src/lifecycle/: lifecycle.rs  mod.rs
common/src/log/: log_factory.rs  mod.rs  tracing_factory.rs
common/src/memory_ext/: mod.rs
common/src/model/: mod.rs  raft_stat.rs
common/src/parse/: codec.rs  many.rs  mod.rs  parse.rs
common/src/row/: mod.rs  row.rs  row_string.rs
common/src/schema/: data_type.rs  mod.rs  rc_task.rs  schema.rs
common/src/server/: mod.rs
common/src/structure/: queue.rs
connection/: Cargo.toml  README.md
connection/src/: bytes.rs  env_options.rs  lib.rs
connection/src/binlog/: binlog_events.rs  binlog_events_wrapper.rs  binlog_options.rs  binlog_subscribe.rs  mod.rs  reg.rs  starting_strategy.rs
connection/src/commands/: auth_plugin_switch_command.rs  authenticate_command.rs  command.rs  dump_binlog_command.rs  dump_binlog_gtid_command.rs  mod.rs  query_command.rs  register_slave_command.rs  ssl_request_command.rs
connection/src/conn/: binlog_connection.rs  configure.rs  connection.rs  connection_options.rs  mod.rs  packet_channel.rs  query_result.rs  ssl_mode.rs
connection/src/declar/: capability_flags.rs  mod.rs  status_flags.rs
connection/src/packet/: auth_switch_packet.rs  end_of_file_packet.rs  error_packet.rs  handshake_packet.rs  mod.rs  ok_packet.rs  result_set_column_packet.rs  result_set_row_packet.rs
connection/tests/: .gitignore  README.md  integration_tests.rs  test-config-sample.toml  test-config.toml.example
memory/: Cargo.toml
memory/src/: lib.rs
mysql/binlog/: Cargo.toml
mysql/binlog/src/: binlog_type.rs  event.rs  event_header.rs  event_type.rs  lib.rs
raft/: Cargo.toml
raft/src/: conn.rs  data_type.rs  error.rs  lib.rs  session.rs
raft/src/cmd/: mod.rs
raft/src/serde/: address.rs  connect.rs  mod.rs
relay_log/: Cargo.toml  README.md
relay_log/src/: lib.rs  relay_log.rs  relay_log_server.rs  relay_log_server_machine.rs
relay_log/src/apply/: mod.rs  relay_log_apply.rs  relay_log_apply_snapshot.rs
relay_log/src/codec/: binary_codec.rs  codec.rs  json_codec.rs  mod.rs
relay_log/src/storage/: compactor.rs  file_system.rs  mod.rs  relay_log_storage.rs  segment.rs  segment_entry_position.rs  segment_file.rs  segment_header.rs  segment_manager.rs  storage_config.rs  storage_entry.rs  storage_event.rs
replay_log/: Cargo.toml
replay_log/benches/: bench_main.rs
replay_log/src/: lib.rs
replay_log/src/apply/: tests.rs
replay_log/src/storage/: tests.rs
slave/: Cargo.toml
slave/src/: lib.rs
slave/src/mysql/: mod.rs
tests/: Cargo.toml
tests/events/8.0/: binlog.000001
tests/src/: lib.rs  test.rs  test_5_7.rs  test_8_0.rs  test_normal.rs  test_stop.rs
tests/src/binlog/: mod.rs  test_5_7.rs  test_8_0.rs  util_test.rs
tests/src/events/: event_factory_test.rs
tests/src/relay_log/: mod.rs  test_relay_log.rs  test_relay_log_server.rs  test_relay_log_server_machine.rs
web/: Cargo.toml  websocket-client.py
web/src/: main.rs  web_error.rs
web/src/api/: default.rs  mod.rs  result.rs
web/src/config/: constant.rs
web/src/wss/: WSSContext.rs  event.rs  mod.rs  server.rs  session.rs  session_manager.rs  wss_action_type.rs  wsscontext.rs
web/static/: index.html  index_chat_ws.html
web/static/css/: index.css
web/static/js/: index.js  ws.js
(+151 files in other folders)
