
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "./memory",
    "./common",
    "./binlog",
    "./connection",
    "./binlog_cli",
    "./tests",
]

# 统一管理三方lib的版本号
[workspace.dependencies]
tokio = {version = "1.32.0", features = ["full"]}
async-trait = "0.1.73"
uuid = "1.4.1"
# 十六进制数据编码
hex = "0.4.2"
lru = "0.12.1"
bytes = "1.5.0"
byteorder = "1.5.0"
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
structopt = "0.3.16"
bitflags = { version = "2.4.1", features = [] }
nom = "7"
lazy_static = "1.4.0"
flatbuffers = "23.5.26"
num_enum = "0.7.1"
dashmap = "5.5.3"
paste = "1.0.14"
pin-project-lite = "0.2.13"
# 时间
chrono = "0.4.31"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"

futures-util="^0.3.29"
futures-executor="^0.3.29"

toml = "^0.8.8"
mysql_common = "^0.30.6"

crc32fast = "1.3.2"
bigdecimal = "0.4"
once_cell = "1.19.0"

clap = { version = "4.4.14", features = ["derive", "cargo", "suggestions"] }

sha1 = "0.10.5"
sha2 = "0.10.6"
rand = "0.8.4"
dirs = "3.0.2"
openssl = "0.10.54"

regex = "1.10.2"
ringbuffer = "0.15.0"
pin-utils = "0.1.0"
native-tls = "0.2.3"
pem = "2"

# 二进制序列化工具
bincode = "1.3.3"