
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
debug = true
opt-level = 0

[workspace]
members = [
    "./memory",
    "./common",
    "./binlog",
    "./connection",
    "./binlog_cli",
    "./web",
    "./tests",
    "./relay_log",
]

[workspace.package]
version = "0.0.2"
description = "MYSQL CDC"
authors = ["fengyang <yueny09@163.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = true
autobenches = true
include = ["src/", "LICENSE-*", "README.md", "README.en.md", "CHANGELOG.md", "COPYRIGHT"]

# 统一管理三方lib的版本号
[workspace.dependencies]
connection = { path = "connection", version = "0.0.2" }
memory = { path = "memory", version = "0.0.2" }
common = { path = "common", version = "0.0.2" }
binlog = { path = "binlog", version = "0.0.2" }
binlog_cli = { path = "binlog_cli", version = "0.0.2" }
relay_log = { path = "relay_log", version = "0.0.2" }
web = { path = "web", version = "0.0.2" }

tokio = {version = "1.38.0", features = ["full"]}
tokio-stream = "0.1.15"

async-trait = "0.1.73"
env_logger = "0.11"
futures-util = { version = "^0.3.29", default-features = false, features = ["std"] }
futures-executor="^0.3.29"
# 十六进制数据编码
hex = "0.4.2"
log = "0.4"
lru = "0.12.1"
bytes = "1.5.0"
byteorder = "1.5.0"
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
serde_bytes = "~0.11.12"
serde_derive = "~1.0.126"
structopt = "0.3.16"
bitflags = { version = "2.4.1", features = [] }
nom = "7"
lazy_static = "1.4.0"
flatbuffers = "23.5.26"
num_enum = "0.7.1"
dashmap = "5.5.3"
paste = "1.0.14"
pin-project-lite = "0.2.13"
# 时间
chrono = "0.4.31"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"

toml = "^0.8.8"
mysql_common = "^0.30.6"

crc32fast = "1.3.2"
bigdecimal = "0.4"
once_cell = "1.19.0"

clap = { version = "4.4.14", features = ["derive", "cargo", "suggestions"] }

# uuid and sha
sha1 = "0.10.5"
sha2 = "0.10.6"
rand = "0.8.4"
uuid = "1.4.1"
fnv = "1.0"

dirs = "3.0.2"
openssl = { version = "0.10", features = ["vendored"] }
#reqwest = "0.10.10"

regex = "1.10.2"
ringbuffer = "0.15.0"
pin-utils = "0.1.0"
native-tls = "0.2.3"
pem = "2"

# 二进制序列化工具
bincode = "1.3.3"
# 自动生成get/set方法宏
getset = "0.1.2"
# memory-mapped file
memmap2 = "0.9.4"
# crc-check
checksum = "0.2.1"

# Duration 的格式化输出。
pretty-duration = "0.1.1"
byte-unit = "5.1.4"