[package]
name = "binlog"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { workspace = true }
async-trait ={ workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
lru = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
#serde = { workspace = true, optional = true }
#serde_json = { workspace = true, optional = true }
#serde_yaml = { workspace = true, optional = true }
structopt = { workspace = true }
bitflags = { workspace = true }
nom = { workspace = true }
lazy_static = { workspace = true }
num_enum = { workspace = true }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
#sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio", "mysql", "json", "macros", "time", "decimal"] }
sqlx = { git = "https://github.com/PrivateRookie/sqlx.git", branch = "boxercrab", default-features = false, features = ["runtime-tokio", "mysql", "json", "macros", "time", "decimal"] }
log = "0.4.20"

common = { path = "../common" }

