[package]
name = "binlog"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
async-trait ={ workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
lru = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
structopt = { workspace = true }
bitflags = { workspace = true }
nom = { workspace = true }
lazy_static = { workspace = true }
num_enum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"

common = { path = "../common" }

