[package]
name = "binlog_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
async-trait ={ workspace = true }
num_enum = { workspace = true }
mysql_common = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

###################################
## 其他模块不依赖，只在 cli 模块中进行声明
###################################
# Duration 的格式化输出。
pretty-duration = "0.1.1"
byte-unit = "5.1.4"

common = { path = "../common" }
binlog = { path = "../binlog" }
connection = { path = "../connection" }
