[package]
name = "connection"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
async-trait ={ workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
structopt = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_enum = { workspace = true }

sha1 = "0.10.5"
sha2 = "0.10.6"
rand = "0.8.4"
dirs = "3.0.2"
hex = "0.4"
openssl = "0.10.54"

common = { path = "../common" }
binlog = { path = "../binlog" }
