[package]
name = "connection"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
async-trait ={ workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
structopt = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_enum = { workspace = true }

sha1 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
openssl = { workspace = true }
native-tls = { workspace = true }
pem = { workspace = true }

chrono = { workspace = true }
common = { path = "../common" }
binlog = { path = "../binlog" }
