[package]
name = "connection"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
binlog = { workspace = true }

tokio = { workspace = true }
async-trait ={ workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
structopt = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_enum = { workspace = true }

sha1 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
openssl = { workspace = true }
native-tls = { workspace = true }
pem = { workspace = true }

chrono = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
