[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
num_enum = { workspace = true }
byteorder = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
pin-project-lite = { workspace = true }
paste = { workspace = true }

memory = { path = "../memory" }
common = { path = "../common" }