[package]
name = "relay_log"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
binlog = { workspace = true }

serde = { workspace = true }
flatbuffers = { workspace = true }
tokio = { workspace = true }
async-trait ={ workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_enum = { workspace = true }
byteorder = { workspace = true }
dashmap = { workspace = true }
ringbuffer = { workspace = true }
pin-utils = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
getset = { workspace = true }
memmap2 = { workspace = true }
checksum = { workspace = true }