[package]
name = "replay_log"
version = "0.1.0"
edition = "2021"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }

common = { path = "../common" }
binlog = { path = "../binlog" }

[dev-dependencies]
criterion = "0.5.1"

bincode = "1.3.3"

[[bench]]
name = "bench_main"
harness = false