[package]
name = "slave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
flate2 = "1.0"
tokio = { version = "1.35.0", features = ["full"] }
# io
bytes = "1.0.1"
percent-encoding = "2.1.0"
bufstream = "~0.1"
io-enum = "1.0.0"
socket2 = "0.5.2"
native-tls = "0.2.3"
libc = "0.2"
url = "2.1"
pem = "2"
once_cell = "1.7.2"
crossbeam = "0.8.1"

# mysql packet
mysql_common = "0.30.6"
rand = "0.8.5"
uuid = "1.4.1"

common = { path = "../common" }
binlog = { path = "../binlog" }

