[package]
name = "binlog"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
async-trait ={ workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
lru = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

common = { path = "../common" }
protocol = { path = "../protocol" }
